--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -5,6 +5,7 @@
   margin: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  font-family: "Poppins", sans-serif; 
 }
 
 img {
@@ -14,12 +15,14 @@ img {
 :root {
   --color-brand-1: #6741D9;
   --color-brand-2: #5F3DC4;
-  --color-grey-1:  #212529;
-  --color-grey-2:  #343a40;
-  --color-grey-3:  #dee2e6;
-  --color-grey-4:  #e9ecef;
-  --color-grey-5:  #f1f3f5;
-  --color-grey-6:  #ffffff;
+  --color-grey-1: #212529;
+  --color-grey-2: #343a40;
+  --color-grey-3: #dee2e6;
+  --color-grey-4: #e9ecef;
+  --color-grey-5: #f1f3f5;
+  --color-grey-6: #ffffff;
+  --color-opacity-1: rgba(0, 0, 0, 0.5);
+  --bg-opacity: #19017A90;
   --radius-default: 0.5rem;
 
   --title-1: 3rem;
@@ -28,28 +31,135 @@ img {
   --title-4: 1.375rem;
   --title-5: 1.125rem;
 
-  --text-1:  1.125rem;
-  --text-2:  1rem;
-  --text-3:  0.875rem;
-}
+  --text-1: 1.125rem;
+  --text-2: 1rem;
+  --text-3: 0.875rem;
 
-body {
-  font-family: "Poppins", sans-serif;
+  --weight-1: 600;
+  --weight-2: 500;
+  --weight-3: 400;
 }
 
 .container {
-  width: 76rem;
+  width: 87.5rem;
   max-width: 100%;
   margin: 0 auto;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  /* padding-left: 1rem;
+  padding-right: 1rem; */
 }
 
-@media(max-width: 991px){
+.container-full{
+  background-color:var(--color-grey-5) ;
+  
+}
+
+.main-aside{
+  display: flex;
+  justify-content: space-between;
+  /* border: 1px solid red;
+  background-color:var(--color-grey-5) ; */
+}
+
+body {
+  
+  margin: 0 auto;
+  width: 1600px;
+  background-color: var(--color-grey-2);
+}
+
+ul{
+  list-style: none;
+}
+
+a{
+  text-decoration: none;
+}
+.mask{
+  background-color: black;
+  z-index: 10;
+  width: 100%;
+  height: 100vh;
+  
+}
+
+.title-1{
+  color: var(--color-grey-3);
+  font-weight: var(--weight-1);
+  font-size: var(--title-1);
+}
+
+.title-4 {
+  color: var(--color-grey-1);
+  font-weight: var(--weight-1);
+  font-size: var(--title-4);
+}
+
+.title-5 {
+  color: var(--color-grey-1);
+  font-weight: var(--weight-1);
+  font-size: var(--title-5);
+}
+
+.text-2 {
+  color: var(--color-grey-2);
+  font-size: var(--text-2);
+  font-weight: var(--weight-3)
+}
+
+.text-3 {
+  color: var(--color-grey-2);
+  font-size: var(--text-3);
+  font-weight: var(--weight-3)
+}
+
+button,a {
+  background-color: var(--color-brand-1);
+  color: var(--color-grey-6);
+  border: 2px solid var(--color-brand-1);
+  border-radius: var(--radius-default);
+  /* border: none; */
+  font-size: var(--text-2);
+  font-weight: var(--weight-2);
+  width:fit-content;
+}
+
+button:hover,
+a:hover {
+  background-color: var(--color-brand-2);
+  border: 2px solid var(--color-brand-2);
+  cursor: pointer;
+}
+
+.button-big {
+  padding: 12px 50px;
+}
+
+.button-little {
+  padding: 7px 28px;
+}
+
+span{
+  color: var(--color-grey-2);
+  font-size: var(--text-3);
+  font-weight: var(--weight-3)
+}
+.trash {
+  background-color: var(--color-grey-5);
+  border-radius: var(--radius-default);
+  border: none;
+}
+
+.trash:hover {
+  background-color: var(--color-grey-3);
+  cursor: pointer;
+}
+
+
+@media(max-width: 991px) {
   :root {
     --title-1: calc(3rem / 1.2);
     --title-2: calc(2.5rem / 1.2);
     --title-3: calc(2rem / 1.2);
-    --text-1:  calc(1.125rem / 1.2);
+    --text-1: calc(1.125rem / 1.2);
   }
 }
