--- a/styles/aside.css
+++ b/styles/aside.css
@@ -2,7 +2,7 @@
 aside {
     width: 503px;
     height: fit-content;
-    min-height: 316px;
+    /* min-height: 316px; */
     padding-top: 32px;
     background: var(--color-grey-6);
     border-radius: var(--radius-default);
@@ -18,8 +18,13 @@ aside>h2 {
 }
 
 .empty-list {
-    margin: 30px 0 100px 28px;
-    display: none;
+    margin: 42px 0 34px 28px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+.empty-list img {
+   width: 267px;
 }
 
 /* .list-aside{
