--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
   font-family: "Poppins", sans-serif; 
+
 }
 
 img {
@@ -61,10 +62,11 @@ img {
 }
 
 body {
-  
   margin: 0 auto;
   width: 1600px;
   background-color: var(--color-grey-2);
+  cursor:default;
+  
 }
 
 ul{
@@ -143,6 +145,7 @@ span{
   font-size: var(--text-3);
   font-weight: var(--weight-3)
 }
+
 .trash {
   background-color: var(--color-grey-5);
   border-radius: var(--radius-default);
@@ -154,6 +157,9 @@ span{
   cursor: pointer;
 }
 
+::-webkit-scrollbar-track { background-color: #F4F4F4 }
+::-webkit-scrollbar { width: 15px; background: #F4F4F4 }
+::-webkit-scrollbar-thumb { background: #a1a1a1; border-radius: 8px; }
 
 @media(max-width: 991px) {
   :root {
