--- a/styles/aside.css
+++ b/styles/aside.css
@@ -1,20 +1,16 @@
-/* --------------- ASIDE ---------------- */
 aside {
     width: 503px;
     height: fit-content;
-    /* min-height: 316px; */
     padding-top: 32px;
     background: var(--color-grey-6);
     border-radius: var(--radius-default);
     margin-top: 132px;
-    /* border: 1px solid red */
     position: sticky;
     top: 0;
 }
 
 aside>h2 {
     padding: 0 0 32px 28px;
-    /* padding-left: 14px; */
 }
 
 .empty-list {
@@ -23,21 +19,14 @@ aside>h2 {
     flex-direction: column;
     gap: 32px;
 }
+
 .empty-list img {
    width: 267px;
 }
 
-/* .list-aside{
-display: flex;
-flex-direction: column;
-gap: 2px;
-} */
-
 .item-aside {
     height: 160px;
     padding: 32px 28px;
-    /* background-color: white; */
-    /* border: 1px solid red; */
     border-bottom: 2px solid var(--color-grey-5);
 }
 
@@ -49,17 +38,7 @@ gap: 2px;
     display: flex;
     justify-content: space-between;
     gap: 26px;
-    
-}
-
-/* .container-job h2 {
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 26px;
-    color: #212529;
-    width: 376px;
-    height: 54px;
-} */
+    }
 
 .container-job button {
     display: flex;
@@ -67,12 +46,12 @@ gap: 2px;
     justify-content: center;
     width: 44px;
     height: 38px;
-    background: #F1F3F5;
-    border: 2px solid #F1F3F5;
+    background: var(--color-grey-5);
+    border: 2px solid var(--color-grey-5);
     border-radius: 8px;
 }
 
 .container-job button:hover {
-    background: #DEE2E6;
-    border: 2px solid #DEE2E6;
+    background: var(--color-grey-3);
+    border: 2px solid var(--color-grey-3);
 }
