--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -5,12 +5,8 @@
   margin: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  font-family: "Poppins", sans-serif; 
+  font-family: "Poppins", sans-serif;
 
-}
-
-img {
-  max-width: 100%;
 }
 
 :root {
@@ -22,7 +18,6 @@ img {
   --color-grey-4: #e9ecef;
   --color-grey-5: #f1f3f5;
   --color-grey-6: #ffffff;
-  --color-opacity-1: rgba(0, 0, 0, 0.5);
   --bg-opacity: #19017A90;
   --radius-default: 0.5rem;
 
@@ -45,46 +40,38 @@ img {
   width: 87.5rem;
   max-width: 100%;
   margin: 0 auto;
-  /* padding-left: 1rem;
-  padding-right: 1rem; */
 }
 
-.container-full{
-  background-color:var(--color-grey-5) ;
-  
+.container-full {
+  background-color: var(--color-grey-5);
 }
 
-.main-aside{
+.main-aside {
   display: flex;
   justify-content: space-between;
-  /* border: 1px solid red;
-  background-color:var(--color-grey-5) ; */
 }
 
 body {
   margin: 0 auto;
   width: 1600px;
   background-color: var(--color-grey-2);
-  cursor:default;
-  
+  cursor: default;
+
 }
 
-ul{
+ul {
   list-style: none;
 }
 
-a{
+a {
   text-decoration: none;
 }
-.mask{
-  background-color: black;
-  z-index: 10;
-  width: 100%;
-  height: 100vh;
-  
+
+img {
+  max-width: 100%;
 }
 
-.title-1{
+.title-1 {
   color: var(--color-grey-3);
   font-weight: var(--weight-1);
   font-size: var(--title-1);
@@ -114,15 +101,15 @@ a{
   font-weight: var(--weight-3)
 }
 
-button,a {
+button,
+a {
   background-color: var(--color-brand-1);
   color: var(--color-grey-6);
   border: 2px solid var(--color-brand-1);
   border-radius: var(--radius-default);
-  /* border: none; */
   font-size: var(--text-2);
   font-weight: var(--weight-2);
-  width:fit-content;
+  width: fit-content;
 }
 
 button:hover,
@@ -140,7 +127,7 @@ a:hover {
   padding: 7px 28px;
 }
 
-span{
+span {
   color: var(--color-grey-2);
   font-size: var(--text-3);
   font-weight: var(--weight-3)
@@ -157,9 +144,19 @@ span{
   cursor: pointer;
 }
 
-::-webkit-scrollbar-track { background-color: #F4F4F4 }
-::-webkit-scrollbar { width: 15px; background: #F4F4F4 }
-::-webkit-scrollbar-thumb { background: #a1a1a1; border-radius: 8px; }
+::-webkit-scrollbar-track {
+  background-color: #F4F4F4;
+}
+
+::-webkit-scrollbar {
+  width: 15px;
+  background: #F4F4F4;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #a1a1a1;
+  border-radius: var(--radius-default);
+}
 
 @media(max-width: 991px) {
   :root {
